# feedback-cli

./: .envrc  Cargo.toml  README.md  flake.nix  result
.beads/: issues.jsonl
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0000/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0001/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0002/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0003/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0004/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0005/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0006/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0007/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0008/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0009/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0010/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0011/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0012/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0013/: summary.md
.cacophony/agent/aurora-feedback-cli-feedback-cli-dev-aur-0/summary/0014/: summary.md
.github/workflows/: ci.yml  release.yml
android/: Feedback.kt  README.md
examples/: report.rs  smoke.rs
ios/: Feedback.swift  README.md
scripts/: doctor.sh  release.sh
src/: lib.rs  mcp.rs
tests/: caco_webhook_e2e.rs
web/: README.md  feedback.ts
